Finished media quaries

--- a/11.02/index.html
+++ b/11.02/index.html
@@ -23,7 +23,7 @@
           <div class="col-11 col-xl-10">
             <div class="row justify-content-between align-items-center">
 
-              <div class="col-10">
+              <div class="col-12 col-sm-10 mb-2">
                   <ul class="d-flex justify-content-between w-100">
                     <li class="menu__item"><a href="#">About</a></li>
                     <li class="menu__item"><a href="#">Service</a></li>
@@ -33,7 +33,7 @@
                   </ul>
               </div>
 
-              <div class="col-2 d-flex justify-content-between">
+              <div class="col-2 col-sm-2 d-flex justify-content-between">
                 <i class="fas fa-shopping-cart mr-5"></i>
                 <i class="fas fa-search"></i>
               </div>
@@ -46,7 +46,7 @@
       <div class="swiper">
         <h2 class="swiper-title mb-5 text-center">Creative Template</h2>
         <div class="row justify-content-center">
-          <div class="col-9 com-sm-6">
+          <div class="col-10 com-sm-6">
             <h1 class="text-center text-uppercase">Welcome to MoGo</h1>
           </div>
         </div>
@@ -89,7 +89,7 @@
 
       <div class="row justify-content-center">
         <div class="col-10 text-center">
-          <p class="text py-lg-5 py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+          <p class="text py-lg-5 py-md-4 py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
         </div>
       </div>
 
@@ -131,7 +131,7 @@
 
   <section class="lines">
     <div class="container">
-      <div class="row justify-content-between align-items-center flex-wrap">
+      <div class="row justify-content-between align-items-start flex-wrap">
         <div class="lines-item flex-grow-1">
           <span class="number">42</span>
           <p class="line-text">Web Design Projects</p>
@@ -158,28 +158,28 @@
 
     <!--  What work with section  -->
 
-<section class="section">
+<section class="section work">
   <div class="container">
 
     <div class="aim pb-3 text-center">What work with</div>
     <div class="title font-weight-bold text-uppercase pb-5 text-center">Amazing Services</div>
 
     <div class="row">
-      <div class="col-4 col-item">
+      <div class="col-lg-4 col-md-6 col-sm-12 col-item">
         <span class="icon-alarm"></span>
         <div class="info">
           <h4>Photography</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</p>
         </div>
       </div>
-      <div class="col-4 col-item">
+      <div class="col-lg-4 col-md-6 col-sm-12 col-item">
         <span class="icon-line_graph"></span>
         <div class="info">
           <h4>Web design</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</p>
         </div>
       </div>
-      <div class="col-4 col-item">
+      <div class="col-lg-4 col-md-6 col-sm-12 col-item">
         <span class="icon-computer-ok"></span>
         <div class="info">
           <h4>Creativity</h4>
@@ -190,21 +190,21 @@
 
       <div class="w-100 outline"></div>
 
-      <div class="col-4 col-item">
+      <div class="col-lg-4 col-md-6 col-sm-12 col-item">
         <span class="icon-book"></span>
         <div class="info">
           <h4>seo</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</p>
         </div>
       </div>
-      <div class="col-4 col-item">
+      <div class="col-lg-4 col-md-6 col-sm-12 col-item">
         <span class="icon-home1"></span>
         <div class="info">
           <h4>Css/Html</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</p>
         </div>
       </div>
-      <div class="col-4 col-item">
+      <div class="col-lg-4 col-md-6 col-sm-12 col-item">
         <span class="icon-digital"></span>
         <div class="info">
           <h4>digital</h4>
@@ -243,14 +243,14 @@
     <div class="title font-weight-bold text-uppercase pb-5 text-center">What we do</div>
     <div class="row justify-content-center">
       <div class="col-10 text-center">
-        <p class="text py-lg-5 py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+        <p class="text py-lg-5 py-md-4 py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
       </div>
     </div>
     <div class="row">
-      <div class="col-6">
+      <div class="col-12 col-md-4 col-lg-6">
         <img src="image/man&photo.jpg" alt="This is a photo">
       </div>
-      <div class="col-6">
+      <div class="col-12 col-md-8 col-lg-6">
 
         <div class="accordion my-accordion" id="accordionExample">
           <div class="card card-style">
@@ -321,7 +321,7 @@
     <div class="slider d-flex justify-content-between align-items-start">
       <span class="icon-arrow_left"></span>
 
-      <div class="box-icon d-flex justify-content-center align-items-center">
+      <div class="box-icon justify-content-center align-items-center">
         <img src="image/speech.svg" alt="This is a speech icon">
       </div>
       <div class="quote">
@@ -346,12 +346,12 @@
 
     <div class="row justify-content-center">
       <div class="col-10 text-center">
-        <p class="text py-lg-5 py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+        <p class="text py-lg-5 py-md-4 py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
       </div>
     </div>
 
     <div class="row justify-content-center">
-      <div class="col-4 position-relative">
+      <div class="col-10 col-md-8 col-lg-4 mb-2 position-relative">
         <div class="image">
           <img src="image/man1.jpg" alt="This is an image">
         </div>
@@ -367,7 +367,7 @@
         </div>
       </div>
 
-      <div class="col-4 position-relative">
+      <div class="col-10 col-md-8 col-lg-4 mb-2 position-relative">
         <div class="image">
           <img src="image/man2.jpg" alt="This is an image">
         </div>
@@ -383,7 +383,7 @@
         </div>
       </div>
 
-      <div class="col-4 position-relative">
+      <div class="col-10 col-md-8 col-lg-4 position-relative">
         <div class="image">
           <img src="image/man3.jpg" alt="This is an image">
         </div>
@@ -422,7 +422,7 @@
 
       <div class="row justify-content-center">
         <div class="col-10 text-center">
-          <p class="text py-lg-5 py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+          <p class="text py-lg-5 py-md-4 py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
         </div>
       </div>
     </div>
@@ -474,47 +474,47 @@
 
       <div class="row">
 
-        <div class="col-6 d-flex justify-content-between align-items-start">
+        <div class="col-12 col-md-6 d-flex justify-content-between align-items-start">
           <div class="clients-photo">
             <img src="image/photo1_man.jpg" alt="This is a photo of man">
           </div>
           <div class="human-info">
             <span class="human-name">Matthew Dix</span>
             <span class="human-work">Graphic Design</span>
-            <p class="text py-lg-4 py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+            <p class="text py-lg-5 py-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
           </div>
         </div>
-        <div class="col-6 d-flex justify-content-between align-items-start">
+        <div class="col-12 col-md-6 d-flex justify-content-between align-items-start">
           <div class="clients-photo">
             <img src="image/photo2_man.jpg" alt="This is a photo of man">
           </div>
           <div class="human-info">
             <span class="human-name">Nick Karvounis</span>
             <span class="human-work">Graphic Design</span>
-            <p class="text py-lg-4 py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+            <p class="text py-lg-5 py-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
           </div>
         </div>
 
         <div class="w-100"></div>
 
-        <div class="col-6 d-flex justify-content-between align-items-start">
+        <div class="col-12 col-md-6 d-flex justify-content-between align-items-start">
           <div class="clients-photo">
             <img src="image/photo3_man.png" alt="This is a photo of man">
           </div>
           <div class="human-info">
             <span class="human-name">Jaelynn Castillo</span>
             <span class="human-work">Graphic Design</span>
-            <p class="text py-lg-4 py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+            <p class="text py-lg-5 py-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
           </div>
         </div>
-        <div class="col-6 d-flex justify-content-between align-items-start">
+        <div class="col-12 col-md-6 d-flex justify-content-between align-items-start">
           <div class="clients-photo">
             <img src="image/photo4_man.jpg" alt="This is a photo of man">
           </div>
           <div class="human-info">
             <span class="human-name">Mike Petrucci</span>
             <span class="human-work">Graphic Design</span>
-            <p class="text py-lg-4 py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+            <p class="text py-lg-5 py-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
           </div>
         </div>
 
@@ -532,8 +532,8 @@
       <div class="aim pb-3 text-center">Our stories</div>
       <div class="title font-weight-bold text-uppercase pb-5 text-center">Latest blog</div>
 
-      <div class="row">
-        <div class="col-4">
+      <div class="row justify-content-center">
+        <div class="col-11 col-md-8 col-lg-4">
           <div class="stories-image">
             <img src="image/photo-woman.jpg" alt="This is a photo">
             <div class="data">
@@ -556,7 +556,7 @@
             </span>
           </div>
         </div>
-        <div class="col-4">
+        <div class="col-11 col-md-8 col-lg-4">
           <div class="stories-image">
             <img src="image/photo-keyboard.jpg" alt="This is a photo">
             <div class="data">
@@ -579,7 +579,7 @@
             </span>
           </div>
         </div>
-        <div class="col-4">
+        <div class="col-11 col-md-8 col-lg-4">
           <div class="stories-image">
             <img src="image/photo-man.jpg" alt="This is a photo">
             <div class="data">
@@ -621,10 +621,10 @@
 
     <section class="contact-info">
       <div class="container border-bottom border-secondary pb-5">
-        <div class="row">
-          <div class="col-5 flex-column">
-            <div class="col-1 contact-info-logo font-weight-bold mb-3"><span class="text-uppercase">M</span>o<span class="text-uppercase">g</span>o</div>
-            <div class="text mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque delectus eius eos ipsa ipsum iste minus molestiae molestias, veniam vero. Asperiores dolorem doloremque, laborum maxime officia officiis qui sapiente temporibus!</div>
+        <div class="row justify-content-center">
+          <div class="col-9 col-xl-5 mb-4 flex-column">
+            <div class="contact-info-logo font-weight-bold mb-3"><span class="text-uppercase">M</span>o<span class="text-uppercase">g</span>o</div>
+            <div class="text mb-3 mb-md-4 mb-lg-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque delectus eius eos ipsa ipsum iste minus molestiae molestias, veniam vero. Asperiores dolorem doloremque, laborum maxime officia officiis qui sapiente temporibus!</div>
             <div class="follow border-bottom border-secondary">
               <span class="font-weight-bold follow-num">15k</span>
               <span>followers</span>
@@ -646,9 +646,9 @@
             </form>
           </div>
 
-          <div class="col-4 flex-column">
-            <span class="contact-name">Blogs</span>
-            <div class="blog-block d-flex justify-content-between mt-3">
+          <div class="col-12 col-xl-4 col-md-6 mb-4 flex-column">
+            <p class="contact-name">Blogs</p>
+            <div class="blog-block d-flex mt-3">
               <img src="image/photos78.jpg" alt="This is a photo">
               <div class="blog-info ml-3">
                 <p class="blog-title">Lorem ipsum dolor sit amet, consectetur</p>
@@ -656,7 +656,7 @@
               </div>
             </div>
 
-            <div class="blog-block d-flex justify-content-between mt-3">
+            <div class="blog-block d-flex mt-3">
               <img src="image/photos79.jpg" alt="This is a photo">
               <div class="blog-info ml-3">
                 <p class="blog-title">Lorem ipsum dolor sit amet, consectetur</p>
@@ -664,7 +664,7 @@
               </div>
             </div>
 
-            <div class="blog-block d-flex justify-content-between mt-3">
+            <div class="blog-block d-flex mt-3">
               <img src="image/photos-7.jpg" alt="This is a photo">
               <div class="blog-info ml-3">
                 <p class="blog-title">Lorem ipsum dolor sit amet, consectetur</p>
@@ -672,9 +672,9 @@
               </div>
             </div>
           </div>
-          <div class="col-3 instagram">
-            <span class="contact-name">Instagram</span>
-            <img src="image/img-collection.png" alt="This is image collection" class="mt-3">
+          <div class="col-12 col-xl-3 col-md-6 instagram">
+            <p class="contact-name">Instagram</p>
+            <img src="image/img-collection.png" alt="This is image collection" class="mt-3 w-75">
             <a href="#">View more photos</a>
 
           </div>
