Added bootstrap css and fixed hover effects on block-socials

--- a/11.02/index.html
+++ b/11.02/index.html
@@ -5,7 +5,10 @@
   <title>Mogo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="css/bootstrap-grid.min.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <link rel="stylesheet" href="css/icomoon_style.css">
 
@@ -354,12 +357,12 @@
       <div class="col-10 col-md-8 col-lg-4 mb-2 position-relative">
         <div class="image">
           <img src="image/man1.jpg" alt="This is an image">
-        </div>
-        <div class="block-socials align-items-center">
-          <a href="#"><span class="icon-facebook"></span></a>
-          <a href="#"><span class="icon-twitter"></span></a>
-          <a href="#"><span class="icon-pinterest"></span></a>
-          <a href="#"><span class="icon-photograph"></span></a>
+          <div class="block-socials align-items-center">
+            <a href="#"><span class="icon-facebook"></span></a>
+            <a href="#"><span class="icon-twitter"></span></a>
+            <a href="#"><span class="icon-pinterest"></span></a>
+            <a href="#"><span class="icon-photograph"></span></a>
+          </div>
         </div>
         <div class="human-info">
           <span class="human-name">Matthew Dix</span>
@@ -370,12 +373,12 @@
       <div class="col-10 col-md-8 col-lg-4 mb-2 position-relative">
         <div class="image">
           <img src="image/man2.jpg" alt="This is an image">
-        </div>
-        <div class="block-socials align-items-center">
-          <a href="#"><span class="icon-facebook"></span></a>
-          <a href="#"><span class="icon-twitter"></span></a>
-          <a href="#"><span class="icon-pinterest"></span></a>
-          <a href="#"><span class="icon-photograph"></span></a>
+          <div class="block-socials align-items-center">
+            <a href="#"><span class="icon-facebook"></span></a>
+            <a href="#"><span class="icon-twitter"></span></a>
+            <a href="#"><span class="icon-pinterest"></span></a>
+            <a href="#"><span class="icon-photograph"></span></a>
+          </div>
         </div>
         <div class="human-info">
           <span class="human-name">Christopher Campbell</span>
@@ -386,12 +389,12 @@
       <div class="col-10 col-md-8 col-lg-4 position-relative">
         <div class="image">
           <img src="image/man3.jpg" alt="This is an image">
-        </div>
-        <div class="block-socials align-items-center">
-          <a href="#"><span class="icon-facebook"></span></a>
-          <a href="#"><span class="icon-twitter"></span></a>
-          <a href="#"><span class="icon-pinterest"></span></a>
-          <a href="#"><span class="icon-photograph"></span></a>
+          <div class="block-socials align-items-center">
+            <a href="#"><span class="icon-facebook"></span></a>
+            <a href="#"><span class="icon-twitter"></span></a>
+            <a href="#"><span class="icon-pinterest"></span></a>
+            <a href="#"><span class="icon-photograph"></span></a>
+          </div>
         </div>
         <div class="human-info">
           <span class="human-name">Michael Fertig </span>
