--- a/Module_1/app/index.html
+++ b/Module_1/app/index.html
@@ -1,15 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>AVE_template</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8">
+    <title>Module1</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/main.css">
+  </head>
+  <body>
+    <div class="container">
+      <header class="header section">
+        <div class="logo">
+          <div class="logo__name">
+            <div class="logo__name1">the</div><div class="logo__name2">point</div>
 
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <section></section>
+          </div>
+          <div class="logo__text">
+            <span>Free PSD Website Tem</span>
+          </div>
+        </div>
+        <form action="get" class="search-form">
+          <input type="text" name="field" placeholder="Search Our Website.."><input type="submit" name="button" value="search">
+        </form>
+      </header>
 
-</body>
+
+
+
+
+    </div>
+
+
+
+  </body>
 </html>
