--- a/Module_1/app/index.html
+++ b/Module_1/app/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <title>Module1</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/icomoon_style.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <div class="container">
+    <div class="box">
+
+      <!-------------HEADER------------->
+
       <header class="header section">
         <div class="logo">
           <div class="logo__name">
@@ -24,6 +28,49 @@
           <input type="text" name="field" placeholder="Search Our Website.."><input type="submit" name="button" value="search">
         </form>
       </header>
+
+      <!---------NAVIGATION---------->
+
+      <nav class="navigation section">
+        <input type="checkbox" id="checkbox-toggle" class="navigation__checkbox">
+        <label for="checkbox-toggle" class="navigation__button">
+          <span>Menu</span>
+          <i class="fas fa-bars"></i>
+        </label>
+        <ul class="menu">
+          <li class="menu__item">
+            <a href="#" class="menu__link">HOMEPAGE</a>
+            <a href="#" class="menu__text">test text here</a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__link">STYLE DEMO</a>
+            <a href="#" class="menu__text">test text here</a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__link">FULL WIDTH</a>
+            <a href="#" class="menu__text">test text here</a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__link">PORTFOLIO</a>
+            <a href="#" class="menu__text">test text here</a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__link">GALLERY</a>
+            <a href="#" class="menu__text">test text here</a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__link">DROPDOWN</a>
+            <a href="#" class="menu__text">test text here</a>
+          </li>
+        </ul>
+        <div class="socials">
+          <div class="socials__item"><span class="icon-icon-linkedin"></span></div>
+          <div class="socials__item"><span class="icon-icon-twitter"></span></div>
+          <div class="socials__item"><span class="icon-icon-pinterest"></span></div>
+          <div class="socials__item"><span class="icon-icon-google-plus"></span></div>
+          <div class="socials__item"><span class="icon-icon-rss"></span></div>
+        </div>
+      </nav>
 
 
 
