--- a/Module_1/app/index.html
+++ b/Module_1/app/index.html
@@ -72,6 +72,25 @@
         </div>
       </nav>
 
+      <!---------SLIDER---------->
+
+      <div class="relation">
+        <div class="relation__ratio"></div>
+        <div class="slider relation__content">
+          <span>1950 x 500px</span>
+          <span>USE CAMERA SLIDER</span>
+        </div>
+      </div>
+      <div class="slider__overlay">
+        <p class="slider__text">Dapiensociis temper donec auctortortis cumsan et curabitur condis lorem loborttis leo. Ipsumcommodo libero nunc at in velis tincidunt sed.</p>
+      </div>
+      <div class="controls">
+        <div class="controls__circle"></div>
+        <div class="controls__circle"></div>
+        <div class="controls__circle active"></div>
+        <div class="controls__circle"></div>
+        <div class="controls__circle"></div>
+      </div>
 
 
 
