Completed the team section

--- a/Module_1/app/index.html
+++ b/Module_1/app/index.html
@@ -24,7 +24,7 @@
             <span>Free PSD Website Tem</span>
           </div>
         </div>
-        <form action="get" class="search-form">
+        <form action="#" method="get" class="search-form">
           <input type="text" name="field" placeholder="Search Our Website.."><input type="submit" name="button" value="search">
         </form>
       </header>
@@ -74,24 +74,67 @@
 
       <!---------SLIDER---------->
 
-      <div class="relation">
-        <div class="relation__ratio"></div>
-        <div class="slider relation__content">
-          <span>1950 x 500px</span>
-          <span>USE CAMERA SLIDER</span>
+      <div class="slider-section">
+        <div class="relation">
+          <div class="relation__ratio"></div>
+          <div class="slider relation__content">
+            <span>1950 x 500px</span>
+            <span>USE CAMERA SLIDER</span>
+          </div>
+        </div>
+        <div class="slider__overlay">
+          <p class="slider__text">Dapiensociis temper donec auctortortis cumsan et curabitur condis lorem loborttis leo. Ipsumcommodo libero nunc at in velis tincidunt sed.</p>
+        </div>
+        <div class="controls">
+          <div class="controls__circle"></div>
+          <div class="controls__circle"></div>
+          <div class="controls__circle active"></div>
+          <div class="controls__circle"></div>
+          <div class="controls__circle"></div>
         </div>
       </div>
-      <div class="slider__overlay">
-        <p class="slider__text">Dapiensociis temper donec auctortortis cumsan et curabitur condis lorem loborttis leo. Ipsumcommodo libero nunc at in velis tincidunt sed.</p>
-      </div>
-      <div class="controls">
-        <div class="controls__circle"></div>
-        <div class="controls__circle"></div>
-        <div class="controls__circle active"></div>
-        <div class="controls__circle"></div>
-        <div class="controls__circle"></div>
-      </div>
 
+      <!---------OUR TEAM---------->
+
+      <section class="team section">
+        <h3 class="team__title">
+          In fringilla massa ut nisi ullamcorper
+        </h3>
+        <p class="team__text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat.
+        </p>
+        <div class="team-people">
+          <div class="team-person">
+            <div class="team-person__photo">
+              <img src="image/person.png" alt="This is a photo">
+            </div>
+            <span class="team-person__name">John Doe</span>
+            <span class="team-person__profile">View Profile &raquo;</span>
+          </div>
+          <div class="team-person">
+            <div class="team-person__photo">
+              <img src="image/person.png" alt="This is a photo">
+            </div>
+            <span class="team-person__name">John Doe</span>
+            <span class="team-person__profile">View Profile &raquo;</span>
+          </div>
+          <div class="team-person">
+            <div class="team-person__photo">
+              <img src="image/person.png" alt="This is a photo">
+            </div>
+            <span class="team-person__name">John Doe</span>
+            <span class="team-person__profile">View Profile &raquo;</span>
+          </div>
+          <div class="team-person">
+            <div class="team-person__photo">
+              <img src="image/person.png" alt="This is a photo">
+            </div>
+            <span class="team-person__name">John Doe</span>
+            <span class="team-person__profile">View Profile &raquo;</span>
+          </div>
+
+        </div>
+      </section>
 
 
 
