Completed the work block

--- a/Module_1/app/index.html
+++ b/Module_1/app/index.html
@@ -136,6 +136,36 @@
         </div>
       </section>
 
+      <!---------OUR TEAM---------->
+
+      <section class="section work">
+        <div class="work__title">
+          <h3>our latest</h3>
+          <span>project work &raquo;</span>
+        </div>
+        <div class="work-item">
+          <div class="relation">
+            <div class="relation__ratio"></div>
+            <div class="relation__content">
+              <span>274 x 170px</span>
+            </div>
+          </div>
+          <h3>Your title here</h3>
+          <p>Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed. Facilispede estibulum nulla orna nisl velit elit ac aliquat non tincidunt.</p>
+          <a href="#">Read more &raquo;</a>
+        </div>
+        <div class="work-item">
+          <div class="relation">
+            <div class="relation__ratio"></div>
+            <div class="relation__content">
+              <span>274 x 170px</span>
+            </div>
+          </div>
+          <h3>Your title here</h3>
+          <p>Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed. Facilispede estibulum nulla orna nisl velit elit ac aliquat non tincidunt.</p>
+          <a href="#">Read more &raquo;</a>
+        </div>
+      </section>
 
 
     </div>
