--- a/Module_1/app/index.html
+++ b/Module_1/app/index.html
@@ -136,7 +136,7 @@
         </div>
       </section>
 
-      <!---------OUR TEAM---------->
+      <!---------WORK---------->
 
       <section class="section work">
         <div class="work__title">
@@ -167,10 +167,58 @@
         </div>
       </section>
 
+      <!---------FOOTER---------->
+
+      <footer class="footer ">
+        <div class="footer-info section">
+          <div class="articles">
+            <div class="article">
+              <h3 class="article__title">About us</h3>
+              <p class="article__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper pellentesque. Quisque non luctus sem. </p>
+              <a href="#" class="article__link">Read More &raquo;</a>
+            </div>
+            <div class="article">
+              <h3 class="article__title">From the blog</h3>
+              <h4 class="article__name">Post Title</h4>
+              <span class="article__date">Friday, 6th April 2000</span>
+              <p class="article__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper pellentesque. Quisque non luctus sem. </p>
+              <a href="#" class="article__link">Read More &raquo;</a>
+            </div>
+          </div>
+          <div class="links">
+            <h3 class="article__title">Link Block</h3>
+            <div class="links__item"><a href="#"> Lorem ipsum dolor sit</a></div>
+            <div class="links__item"><a href="#"> Amet consectetur</a></div>
+            <div class="links__item"><a href="#"> Praesent vel sem id</a></div>
+            <div class="links__item"><a href="#"> Curabitur hendrerit est</a></div>
+            <div class="links__item"><a href="#"> Aliquam eget erat nec sapien</a></div>
+            <div class="links__item"><a href="#"> Cras id augue nunc</a></div>
+            <div class="links__item"><a href="#"> In nec justo non</a></div>
+            <div class="links__item"><a href="#"> Vivamus mollis enim ut</a></div>
+            <div class="links__item"><a href="#"> Curabitur hendrerit est</a></div>
+          </div>
+          <div class="submit">
+            <h3 class="article__title">Newsletter</h3>
+            <p class="article__text">Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed.</p>
+            <form action="#" method="post">
+              <input type="text" placeholder="Name">
+              <input type="email" placeholder="Email">
+              <input type="submit" value="Submit">
+            </form>
+            <h3 class="article__title">contact us</h3>
+            <span class="article__name">Tel: xxxxx xxxxxxxxx</span>
+            <span class="article__name">Email: contact@mydomain.com</span>
+
+          </div>
+        </div>
+
+        <div class="footer-copyright section">
+          <span class="article__name">Copyright © 2013 - All Rights Reserved - Domain Name</span>
+          <span class="article__name">Template by OS Templates</span>
+        </div>
+      </footer>
 
     </div>
-
-
 
   </body>
 </html>
